<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_white_36dp"
        android:title="@string/action_search_users"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_exit"
        android:title="@string/exit"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_log_out"
        android:title="@string/log_out"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_log_in"
        android:title="@string/log_in"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_refresh"
        android:title="@string/action_refresh"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_upload_file"
        android:title="@string/upload_file"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_upload_photo"
        android:title="@string/upload_photo"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_send_message"
        android:title="@string/send_message"
        app:showAsAction="never" />

</menu>