<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="6dp">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardBackgroundColor="@color/colorUserCard"
        card_view:cardCornerRadius="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="6dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageViewProfile"
                android:layout_width="@dimen/item_user_card_view_profile"
                android:layout_height="@dimen/item_user_card_view_profile"
                android:src="@drawable/default_profile"
                android:contentDescription="@string/view_profile" /><!-- de.hdodenhof.circleimageview.CircleImageView -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="4dp"
                android:layout_marginStart="4dp"
                android:gravity="center_vertical"
                android:orientation="vertical"><!-- android:layout_marginLeft="4dp" -->

                <TextView
                    android:id="@+id/realName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorUserCardName"
                    android:textSize="@dimen/item_user_card_view_name"
                    tools:text="@string/empty_user" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textSize="@dimen/item_user_card_view_phone"
                    tools:text="+380960011252 +380960011252 +380960011252 +380960011252 +380960011252" />
                <TextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:textSize="@dimen/item_user_card_view_phone"
                    tools:text="alfred@tee.zoom" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageViewOpenIm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/em1053"
                android:contentDescription="@string/add_im" />

        </LinearLayout>


    </android.support.v7.widget.CardView>
</LinearLayout>